--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
-<head>
-</head>
-<body>
-<h1>Hello</h1>
-worlddd
-</body>
+  <head>
+  </head>
+  <body>
+    <h1>Tina King</h1>
+    email
+    phone
+    your major
+    your IP address
+    where you are from
+    something no one would expect about you
+    a picture of you
+  </body>
 </html>
