--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   </head>
   <body>
     <h1>Tina King</h1>
-    email
-    phone
-    your major
-    your IP address
-    where you are from
-    something no one would expect about you
-    a picture of you
+    <pre>
+    christina.king@tufts.edu
+    computer science
+    130.64.25.62
+    Louisville, KY
+    I have 5 siblings</pre>
   </body>
 </html>
